[tool.poetry]
name = "dasf-seismic"
version = "1.0.beta.5"
description = "DASF module for Seismic Computation"
authors = ["Julio Faracco <jcfaracco@gmail.com>"]
maintainers = ["Julio Faracco <jcfaracco@gmail.com>"]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
]
packages = [
    {include = "dasf_seismic"}
]

[tool.poetry.dependencies]
dasf = "*"
dask = "*"
psutil = "*"
python = "^3.8"
scikit-image = "*"
segyio = "*"
segysak = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
